Updated CSS to fix li alignment

--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ ul {
 }
 
 ul li {
-    text-indent: -1.5rem;
     padding-left: 1.5rem;
 }
 
